av-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    com.centurylinklabs.watchtower.enable: "true"
  creationTimestamp: null
  labels:
    io.kompose.service: paperless-av
    app: paperless-av
  name: paperless-av
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: paperless-av
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        com.centurylinklabs.watchtower.enable: "true"
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/nextcloud: "true"
        io.kompose.service: paperless-av
    spec:
      containers:
        - image: mkodockx/docker-clamav:alpine
          name: paperless-av
          ports:
            - containerPort: 3310
          resources: 
            limits:
              cpu:      "500m"
              memory: "1500Mi"
            requests:
              cpu:      "200m"
              memory:    "1Gi"
          volumeMounts:
            - mountPath: /var/lib/clamav
              name: paperless-av
      restartPolicy: Always
      volumes:
        - name: paperless-av
          persistentVolumeClaim:
            claimName: paperless-av
status: {}
