broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: paperless-broker
  name: paperless-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: paperless-broker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: paperless-broker
    spec:
      containers:
        - image: redis:6.0
          name: paperless-broker
          ports:
            - containerPort: 6379
          resources: {}
      restartPolicy: Always
status: {}
