db-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: paperless-db
  name: paperless-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: paperless-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: paperless-db
    spec:

      containers:
        - env:
            - name:  MARIADB_USER
              value: paperless
            - name:  MARIADB_PASSWORD
              value: paperless
            - name:  MARIADB_DATABASE
              value: paperless
            - name:  MARIADB_ROOT_PASSWORD
              value: xxxxxxxxxxxxxxxxxxxx
          image: mariadb
          name: paperless-db
          resources:
            requests: 
              cpu:    "500m"
              memory: "500Mi"
            limits: 
              cpu:    "1"
              memory: "1Gi"
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql/
              name: db-claim0

      restartPolicy: Always

      volumes:
        - name: db-claim0
          persistentVolumeClaim:
            claimName: db-claim0

status: {}
