ocr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: paperless-ocr
  name: paperless-ocr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: paperless-ocr
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: paperless-ocr
    spec:
      containers:
        - name: gotenberg
          image: thecodingmachine/gotenberg
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
          ports:
            - containerPort: 3000
          resources: {}
        - name: tika
          image: apache/tika:1.28.1-full
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
          ports:
            - containerPort: 9998
          resources: {}
      restartPolicy: Always
status: {}
