webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: paperless-app
  name: paperless-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: paperless-app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.service: paperless-app
    spec:
      containers:
        - name: paperless-app
          image: ghcr.io/paperless-ngx/paperless-ngx:latest
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:8000
            failureThreshold: 5
            periodSeconds: 30
            timeoutSeconds: 10
          ports:
            - containerPort: 8000
          resources: {}
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: webserver-claim0
            - mountPath: /usr/src/paperless/media
              name: webserver-claim1
            - mountPath: /usr/src/paperless/export
              name: webserver-claim2
            - mountPath: /usr/src/paperless/consume
              name: paperless-consume
      restartPolicy: Always
      volumes:
        - name: paperless-consume
          nfs:
            server: Your-NFS-HOSTNAME-OR-IP
            path: /path/to/export/directory
status: {}
