av-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    com.centurylinklabs.watchtower.enable: "true"
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: paperless-av
    app: paperless-av
  name: paperless-av
spec:
  ports:
    - name: "paperless-av"
      port: 3310
      targetPort: 3310
  selector:
    io.kompose.service: paperless-av
status:
  loadBalancer: {}
