broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: paperless-broker
  name: paperless-broker
spec:
  ports:
    - name: paperless-broker
      port: 6379
      targetPort: 6379
  selector:
    io.kompose.service: paperless-broker
