db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: paperless-db
  name: paperless-db
spec:
  ports:
    - name: paperless-db
      port: 3306
      targetPort: 3306
  selector:
    io.kompose.service: paperless-db
