webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: paperless-app
  name: paperless-app
spec:
  type: NodePort
  ports:
    - name: "paperless-app"
      port: 8000
      targetPort: 8000
      nodePort: 30083
  selector:
    io.kompose.service: paperless-app
status:
  loadBalancer: {}
